--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.21.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "react": "^18.1.0",
@@ -30,6 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "testc": "NODE_OPTIONS=--unhandled-rejections=warn  react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
