--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.36",
-    "@types/react": "^18.0.9",
+    "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.21.1",
     "date-fns": "^2.28.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "formik": "^2.2.9",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.3",
@@ -30,9 +31,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "testc": "NODE_OPTIONS=--unhandled-rejections=warn  react-scripts test --coverage",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --verbose --silent",
+    "testc": "react-scripts test --watchAll --coverage",
+    "eject": "react-scripts eject",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +57,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "cypress": "^10.1.0",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
